style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    background-color: rgb(174, 235, 243);
}

.chatbot-container {
    max-width: 500px;
    width: 100%;
    max-height: 700px;
    height: 75%;
    position: absolute;
    right: 1rem;
    bottom: 5rem;
    left: 1rem;
    display: none;

}

#ingestaiFrame {

    overflow: hidden;
    height: 100%;
    width: 100%;
    border-radius: 10px;
}

.chatbot-icon-container {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
    width: 50px;
    height: 50px;
}

.chatbot-img {
    width: 100%;
    height: auto;
}

.show-hide-chatbot {
    display: block;
}

